--- a/src/layouts/default.html
+++ b/src/layouts/default.html
@@ -1,16 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     {{> head }}
 </head>
+
 <body>
 
-    {{> header }}
+    <div>
+        {{> header }}
 
-    {{> body }}
+        <main class="main">
+            {{> body }}
+        </main>
 
-    {{> footer }}
 
+        {{> footer }}
+    </div>
     <script src="assets/js/app.js"></script>
 </body>
+
 </html>
