--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,1 +1,14 @@
-<header>header</header>
+<header>
+
+    <div class="navbar">
+      <div class="logo"> </div>
+      <ul>
+          <li class="News"><a href=""></a></li>
+          <li class="Search"><a href=""></a></li>
+          <li><a href="Schools"></a></li>
+          <li><a href="Child"></a></li>
+          <li><a href="edu.gov.kg"></a></li>
+      </ul>
+      <button class="language"> </button>
+    </div>
+</header>
