last news block

--- a/src/assets/scss/vars.scss
+++ b/src/assets/scss/vars.scss
@@ -1,2 +1,4 @@
 $main_color: #ECECEC;
-$second_color: 6D90EB;
+$second_color: #6D90EB;
+$pt: 'PT Sans Caption', sans-serif;
+$ws: 'Work Sans', sans-serif;
