--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,21 +1,20 @@
+@import "reset";
 @import "vars";
-<<<<<<< HEAD
-=======
 @import "fonts";
 @import "last-news";
->>>>>>> 7a58dea13666ba0971fc86104e0dd7d944b204b2
+
+
 body {
     background-color: $main_color;
-    position: absolute;
-    width: 1400px;
-    height: 4415px;
+    
+    
+}
 
+.container {
+    width: 1400px;
+    margin: 0 auto;
 }
 //NAVBAR STYLES
 
-.navbar {
-    position: fixed;
-    background-color: $second_color;
-    width: 1400px;
-    height: 59px;
-}
+
+
