--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -1,21 +1,43 @@
 @import "vars";
-<<<<<<< HEAD
-=======
 @import "fonts";
 @import "last-news";
->>>>>>> 7a58dea13666ba0971fc86104e0dd7d944b204b2
+
 body {
     background-color: $main_color;
-    position: absolute;
-    width: 1400px;
-    height: 4415px;
-
 }
 //NAVBAR STYLES
 
 .navbar {
-    position: fixed;
     background-color: $second_color;
     width: 1400px;
     height: 59px;
+    margin: 0 auto;
+    & > ul > li{
+        margin: 20px;
+    }
 }
+ul {
+    height: 59px;
+    margin-top: 0; /* Обнуляем значение отступов */
+    padding: 4px; /* Значение полей */
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+
+
+   }
+ul li {
+    & > a {
+        text-decoration: none;
+
+    }
+    list-style: none;
+    margin-right: 5px; /* Отступ слева */
+
+
+    font-family: $pt;
+    font-size: 20px;
+   }
+
