--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,15 @@
 <header>
 
     <div class="navbar">
-      <div class="logo"> </div>
+      <div class="logo"> <img src="/img/main_icon.png" alt=""></div>
       <ul>
-          <li class="News"><a href=""></a></li>
-          <li class="Search"><a href=""></a></li>
-          <li><a href="Schools"></a></li>
-          <li><a href="Child"></a></li>
-          <li><a href="edu.gov.kg"></a></li>
+          <li class="News"><a href="">Новости</a></li>
+          <li class="Search"><a href="">Поиск</a></li>
+          <li><a href="Schools"> Школы</a></li>
+          <li><a href="Child">Детский Сад</a></li>
+          <li><a href="edu.gov.kg">Сайт министерства образования</a></li>
+          <li><img src="/img/lang.png" alt=""></li>
       </ul>
-      <button class="language"> </button>
+      <div class="language"> </div>
     </div>
 </header>
