--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,14 +1,14 @@
 <header>
 
     <div class="navbar">
-      <div class="logo"> <img src="/img/main_icon.png" alt=""></div>
+     <img src="../assets/images/img/lang.png" alt="">
       <ul>
           <li class="News"><a href="">Новости</a></li>
           <li class="Search"><a href="">Поиск</a></li>
           <li><a href="Schools"> Школы</a></li>
           <li><a href="Child">Детский Сад</a></li>
           <li><a href="edu.gov.kg">Сайт министерства образования</a></li>
-          <li><img src="/img/lang.png" alt=""></li>
+          <li><img src="../assets/images/img/lang.png" alt=""></li>
       </ul>
       <div class="language"> </div>
     </div>
