--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -17,8 +17,10 @@ body {
     & > ul > li{
         margin: 20px;
     }
+
 }
 ul {
+    width: 1111px;
     height: 59px;
     margin-top: 0; /* Обнуляем значение отступов */
     padding: 4px; /* Значение полей */
@@ -35,6 +37,7 @@ ul li {
         text-decoration: none;
 
     }
+    line-height: 20px;
     list-style: none;
     margin-right: 5px; /* Отступ слева */
 
@@ -49,6 +52,14 @@ body {
     background-color: $main_color;
 
 
+}
+
+.logo
+{    width: 289px;
+    & > img {
+        text-align: left;
+        width: 289px;
+}
 }
 
 .container {
