--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,15 +1,16 @@
 <header>
 
     <div class="navbar">
-     <img src="../assets/images/img/lang.png" alt="">
+
       <ul>
+ <div class="logo"><img src="../assets/images/img/main_icon.png" alt=""></div>
           <li class="News"><a href="">Новости</a></li>
           <li class="Search"><a href="">Поиск</a></li>
           <li><a href="Schools"> Школы</a></li>
           <li><a href="Child">Детский Сад</a></li>
           <li><a href="edu.gov.kg">Сайт министерства образования</a></li>
-          <li><img src="../assets/images/img/lang.png" alt=""></li>
+          <li ><img src="../assets/images/img/lang.png" alt=""></li>
       </ul>
-      <div class="language"> </div>
+
     </div>
 </header>
