--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -2,7 +2,7 @@
 
     <div class="navbar">
      <img src="../assets/images/img/lang.png" alt="">
-      <ul>
+      <ul class="header_ul">
           <li class="News"><a href="">Новости</a></li>
           <li class="Search"><a href="">Поиск</a></li>
           <li><a href="Schools"> Школы</a></li>
