--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,1 +1,23 @@
-<footer>Footer</footer>
+
+
+    <footer class="footer">
+        <div class="telephone">
+            Телефон : +996 312 22 22 22
+        </div>
+        <div class="email">
+            Почта : Edu_gov@gmail.com
+        </div>
+        <div class="content_footer">
+            <p>
+                © ИА «24.kg» - Министерство образования и науки Кыргызстана.
+                Все права защищены. Вся информация, размещенная на данном веб-сайте,
+                предназначена только для персонального использования и не подлежит распространению без письменного разрешения.
+                Новостной портал не несет ответственности за содержимое перепечатанных материалов и высказывания отдельных лиц.
+            </p>
+        </div>
+        <div class="address_footer">
+            <p>
+                Кыргызстан, 720001, г. Бишкек, ул.Шопокова, 121/1 +996 312 660188
+            </p>
+        </div>
+    </footer>
