--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -1,16 +1,11 @@
 <header>
 
     <div class="navbar">
-<<<<<<< HEAD
 
-      <ul>
- <div class="logo"><img src="../assets/images/img/main_icon.png" alt=""></div>
-=======
-     <img src="../assets/images/img/lang.png" alt="">
-      <ul class="header_ul">
->>>>>>> main
-          <li class="News"><a href="">Новости</a></li>
-          <li class="Search"><a href="">Поиск</a></li>
+     <ul class="header_ul">
+          <img src="../assets/images/img/main_icon.png" class="main_icon "alt="">
+          <li class="header_link"><a class="header_link" href="">Новости</a></li>
+          <li class="header_link"><a class="header_link" href="">Поиск</a></li>
           <li><a href="Schools"> Школы</a></li>
           <li><a href="Child">Детский Сад</a></li>
           <li><a href="edu.gov.kg">Сайт министерства образования</a></li>
