--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -4,49 +4,15 @@
 @import "last-news";
 @import "global";
 @import "date-news";
+@import "navbar";
+@import "footer";
+@import "specific-news";
+
+
 body {
     background-color: $main_color;
 }
-//NAVBAR STYLES
 
-.navbar {
-    background-color: $second_color;
-    width: 1400px;
-    height: 59px;
-    margin: 0 auto;
-    & > ul > li{
-        margin: 20px;
-    }
-
-}
-
-
-.header_ul {
-
-    height: 59px;
-    margin-top: 0; /* Обнуляем значение отступов */
-    padding: 4px; /* Значение полей */
-    text-align: center;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-
-
-   }
-.header_ul li {
-    & > a {
-        text-decoration: none;
-
-    }
-    line-height: 20px;
-    list-style: none;
-    margin-right: 5px; /* Отступ слева */
-
-
-    font-family: $pt;
-    font-size: 20px;
-   }
 
 
 
@@ -54,21 +20,13 @@ body {
     background-color: $main_color;
 
 
-}
-
-.logo
-{    width: 289px;
-    & > img {
-        text-align: left;
-        width: 289px;
-}
 }
 
 .container {
     width: 1400px;
     margin: 0 auto;
 }
-//NAVBAR STYLES
+
 
 
 
