--- a/src/partials/school-news__block.html
+++ b/src/partials/school-news__block.html
@@ -14,13 +14,85 @@
                         <li class="date-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
                         <li class="date-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
                         <li class="date-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
+                        <li class="date-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
+                    </ul>
+                </div>
+                <div class="date-news__wrapper">
+                    <span class="date-news__day">
+                        9 Февраля , Четверг
+                    </span>
+                    <ul class="date-news__list">
+                        <li class="date-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
+                        <li class="date-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
+                        <li class="date-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
+                        <li class="date-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
                     </ul>
                 </div>
             </div>
             <div class="box-news">
-    
+                <div class="box-news__mini">
+                    <div class="box-news__item">
+                        <div class="box-news__item--img">
+                            
+                        </div>
+                        <div class="box-news__item--text">
+                            In mauris et id accumsan ornare efficitur nulla ut.
+                        </div>
+                        <div class="box-news__item--view">
+                            Просмотрено :223
+                        </div>
+                    </div>
+                    <div class="box-news__item">
+                        <div class="box-news__item--img">
+                            
+                        </div>
+                        <div class="box-news__item--text">
+                            In mauris et id accumsan ornare efficitur nulla ut.
+                        </div>
+                        <div class="box-news__item--view">
+                            Просмотрено :223
+                        </div>
+                    </div>
+                    <div class="box-news__item">
+                        <div class="box-news__item--img">
+                            
+                        </div>
+                        <div class="box-news__item--text">
+                            In mauris et id accumsan ornare efficitur nulla ut.
+                        </div>
+                        <div class="box-news__item--view">
+                            Просмотрено :223
+                        </div>
+                    </div>
+                    <div class="box-news__item">
+                        <div class="box-news__item--img">
+                            
+                        </div>
+                        <div class="box-news__item--text">
+                            In mauris et id accumsan ornare efficitur nulla ut.
+                        </div>
+                        <div class="box-news__item--view">
+                            Просмотрено :223
+                        </div>
+                    </div>
+                </div>
+                <div class="box-news__max">
+                    
+                        <div class="box-news__max--div">
+                            <img src="" class="box-news__max--img" alt="">
+                        </div>
+                        <div class="box-news__max--text">
+                            <h3>Lorem ipsum water text</h3>
+                            <p>In mauris et id accumsan ornare efficitur nulla ut. asdfasdfas</p>
+                            <span>Просмотрено: 227</span>
+                        </div>
+                    
+                </div>
             </div>
         </div>
-        
+        <div class="pagination">
+            Смотреть еще >>
+
+        </div>
     </div>
 </div>
