--- a/src/assets/scss/footer.scss
+++ b/src/assets/scss/footer.scss
@@ -6,8 +6,8 @@ footer {
     height: 240px;
     margin-top: 80px;
     position: relative;
-    left: 0;
-    bottom: 0;
+    left: 0px;
+    bottom: -265px;
 }
 
 .telephone {
