--- a/src/assets/scss/schools.scss
+++ b/src/assets/scss/schools.scss
@@ -1,21 +1,50 @@
 @import "reset";
 @import "fonts";
 @import  "vars";
-.dropdown_1 {
+
+.dropdown {
   margin-top: 50px;
-  margin-left: 50px;
+  text-align: center;
+}
+
+select {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 7px;
+  height: 45px;
+  width: 300px;
+  font-family: $pt;
+  font-weight: 600;
+  font-size: 18px;
+  padding-left: 18px;
+  border: 4px solid $second_color;
+  outline: none;
+}
+
+
+label {
+  font-family: $pt;
+  font-weight: bold;
+  font-size: 20px;
+  margin-bottom: 13px;
 }
 
 .select_1 {
-  appearance: none;
-  border-radius: 5px;
-  height: 45px;
-  width: 300px;
-  font-family: $ws;
-  font-size: 20px;
-  padding-left: 18px;
-  border: 3px solid $second_color;
+  margin-right: 120px;
 }
+
+select, label {
+  display: block;
+}
+.select_1, .select_2 {
+  display: inline-block;
+  margin-bottom: 100px;
+}
+
+
+
+
 
 * {
     box-sizing: border-box;
@@ -31,6 +60,7 @@
     height: 60px;
     margin-left: 150px;
     font-size: 20px;
+    font-family: $pt;
     &[data-state="active"] {
       .__select__title {
         &::before {
@@ -100,30 +130,7 @@
       margin-left: 275px;
       margin-bottom: 20px;
   }
-  /*.reset {
-    display: flex;
-    width: 230px;
-    padding: 8px 16px;
-    margin: 0 auto;
-    margin-bottom: 10px;
-    
-    border: solid 1px #c7ccd1;
-    border-radius: 5px;
-    
-    transition: all 0.2s ease-out;
-    
-    cursor: pointer;
-    
-    font-weight: bold;
-    
-    background-color: #ffffff;
-    color: #333333;
-    
-    &:hover {
-      background-color: $second_color;
-      color: #ffffff;
-    }
-  }*/
+  
   .__select__content {
     position: absolute;
     top: 40px;
