add school blocks and pagination

--- a/src/partials/schools.html
+++ b/src/partials/schools.html
@@ -64,6 +64,82 @@
                 <option data-option="g">Лейлекский район</option>
             </select>
         </div>
+        <div class="items">
+            
+            <div class="block-horizontal">
+                <p class="text">Школа-гимназия № 37</p>       
+                <div class="item-img">
+
+                </div> 
+            </div>
+            
+            <div class="block-horizontal"> 
+                <p class="text">Школа-гимназия № 37</p>   
+                <div class="item-img">
+                    
+                </div>
+            </div>
+            
+            <div class="block-horizontal">
+                <p class="text">Школа-гимназия № 37</p>
+                <div class="item-img">
+                    
+                </div>
+            </div>
+            
+            <div class="block-horizontal">
+                <p class="text">Школа-гимназия № 37</p>
+                <div class="item-img">
+                    
+                </div> 
+            </div>
+            
+            <div class="block-horizontal">
+                <p class="text">Школа-гимназия № 37</p>
+                <div class="item-img">
+                    
+                </div>
+            </div>
+            
+            <div class="block-horizontal">
+                <p class="text">Школа-гимназия № 37</p>
+                <div class="item-img">
+                    
+                </div>               
+            </div>
+            
+            <div class="block-horizontal">
+                <p class="text">Школа-гимназия № 37</p>
+                <div class="item-img">
+                    
+                </div>  
+            </div>
+            
+            <div class="block-horizontal">
+                <p class="text">Школа-гимназия № 37</p>
+                <div class="item-img">
+                    
+                </div> 
+            </div>
+            
+            <div class="block-horizontal">
+                <p class="text">Школа-гимназия № 37</p>
+                <div class="item-img">
+                    
+                </div>
+            </div>
+        </div>
+
+        <div class="pagination">
+            <a href="#">&laquo;</a>
+            <a href="#">1</a>
+            <a class="active" href="#">2</a>
+            <a href="#">3</a>
+            <a href="#">4</a>
+            <a href="#">5</a>
+            <a href="#">&raquo;</a>
+        </div>
+
         <script>
             var sel1 = document.querySelector('#sel1');
             var sel2 = document.querySelector('#sel2');
