--- a/src/assets/scss/schools.scss
+++ b/src/assets/scss/schools.scss
@@ -211,3 +211,67 @@ select, label {
     border-width: 200px 100px 0 100px;
     border-color: #6980fe transparent transparent transparent;
 }
+
+//items school
+
+.items {
+  background-color: #FFFFFF;
+  border-radius: 25px;
+  padding: 0 30px 30px 30px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.block-horizontal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-basis: 31%;
+  margin-top: 40px;
+  display: flex;
+  justify-content: center;
+}
+
+.item-img {
+  // display: inline;
+  background-color: #C4C4C4;
+  border-radius: 25px;
+  width: 313px;
+  height: 185px;
+}
+
+.text {
+  display: flex;
+  font-size: 23px;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+//pagination
+.pagination {
+  margin-top: 75px;
+  display: flex;
+  justify-content: center;
+  font-size: 30px;
+}
+
+.pagination a {
+  color: black;
+  float: left;
+  padding: 8px 16px;
+  text-decoration: none;
+  transition: background-color .3s;
+  border-radius: 15px;
+  margin-left: 5px;
+  font-family: $ws;
+}
+
+/* Стиль активной/текущей ссылки */
+.pagination a.active {
+  background-color: #6D90EB;
+  color: white;
+}
+
+/* Добавить серый цвет фона при наведении курсора мыши */
+.pagination a:hover:not(.active) {background-color: #ddd;}
