Profile final version

--- a/src/partials/profile-school__block.html
+++ b/src/partials/profile-school__block.html
@@ -1,16 +1,34 @@
 <div class="container">
     <div class="profile-school">
-        <div class="profile-school__left">
 
-            <div class="profile-school__left--text">
-               <h2>Lorem ipsum water text</h2>
-                <div class="date_publication"> Дата Публикации: [28.02.2022 12:44] </div>
-                <div class="viewed"> Просмотрено : [228] </div>
-                <div class="profile-school__left--div"> <img src="" class="profile-school__left--img" alt=""> </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias adipisci, fugit accusamus eaque excepturi ducimus laborum quod labore, voluptas sapiente facere iste. Sapiente animi, totam obcaecati! Sequi delectus sint fugiat!</p>
-            </div>
 
-        </div>
+           <div class="profile-news__wrapper">
+                    <span class="profile-news__info">
+                        10 Февраля , Четверг
+                    </span>
+                    <ul class="profile-news__list">
+                        <li class="profile-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
+                        <li class="profile-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
+                        <li class="profile-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
+                        <li class="profile-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
+                        <li class="profile-news__item"><a href="#"> <span>10:01</span> Нездоровая практика. Депутат возмущена, что блогеров задерживают как членов ОПГ </a></li>
+                    </ul>
+                    <span class="profile-news__more">
+                        Смотреть еще..
+                    </span>
+                    <div class="profile-news__contacts">
+                            <h2 class="number">Контакты школы</h2>
+                            <p> Мобильный: +996554345211<br>
+Городской : 0312 54 66 32
+                        </p>
+                        <h3>Адрес
+</h3>
+                            <p> ул. Айтматова, 62
+                        </p>
+                    </div>
+                </div>
+
+
 
 
 
@@ -26,9 +44,17 @@
             </div>
             <div class="profile-school__right--text">
                <h2 class="title">Lorem ipsum water text</h2>
-
+                <div class="info">
+                    <div class="date">
+                        Дата Публикации:  [Дата]
+                    </div>
+                    <div class="view">
+                        Просмотрено: 227
+                    </div>
+                </div>
                 <div class="profile-school__right--div"> <img src="" class="profile-school__right--img" alt=""> </div>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias adipisci, fugit accusamus eaque excepturi ducimus laborum quod labore, voluptas sapiente facere iste. Sapiente animi, totam obcaecati! Sequi delectus sint fugiat!</p>
+                <p>Играет подготовки идейные плановых в количественный позволяет реализации соображения нас важную поставленных позволяет задания в задания постоянный реализации подготовки активизации. Постоянный соображения и а постоянный деятельности в выполнять рост и активности образом занимаемых повседневная условий. Кадров повседневная по таким количественный организации активности что сложившаяся проверки идейные организации, высшего образом реализаци.
+</p>
             </div>
 
         </div>
