--- a/src/assets/scss/profile-school.scss
+++ b/src/assets/scss/profile-school.scss
@@ -54,9 +54,33 @@ ul.breadcrumb {
     display: inline-block;
 }
 
+.info{
+display: flex;
+    justify-content: space-between;
+
+}
+
+.date {
+
+font-family: PT Serif Caption;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 24px;
+}
+
+.view {
+    font-family: PT Serif Caption;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 24px;
+    padding-right: 40px;
+}
 //CONTENT SPECIFIC NEWS
 .profile-school {
     display: flex;
+    justify-content: space-around;
     padding-top: 40px;
     &--img{
 
@@ -80,7 +104,7 @@ ul.breadcrumb {
 
 .profile-school__right{
     width: 724px;
-height: 1517px;
+
     background-color: #fff;
     padding: 43px 40px 43px 16px;
     border-radius: 25px;
@@ -93,12 +117,14 @@ height: 1517px;
         height: 400px;
         background: #C4C4C4;
         border-radius: 15px;
+    margin-top: 20px;
     }
     &--img{
 
             height: 195px;
             background: #C4C4C4;
             border-radius: 15px;
+        padding-top: 20px;
         }
     &--text{
         margin: 0 0 0 40px;
@@ -109,7 +135,7 @@ height: 1517px;
         & > h2 {
             font-family: PT Serif Caption;
             font-style: normal;
-            font-weight: bold;
+            font-weight: normal;
             font-size: 48px;
             line-height: 94px;
             letter-spacing: -0.02em;
@@ -121,10 +147,11 @@ height: 1517px;
             padding-top: 20px;
             font-family: Work Sans;
             font-style: normal;
-            font-weight: bold;
+            font-weight: normal;
             font-size: 24px;
             line-height: 40px;
-            letter-spacing: 0.05em;
+            letter-spacing: -0.02em;
+            text-align: left;
 
             color: #000000;
         }
@@ -206,3 +233,112 @@ height: 1517px;
     }
 }
 
+.profile-news__item{
+    background-color: #fff;
+    border-radius: 25px;
+    padding: 15px 0;
+    & > a {
+        font-family: Work Sans;
+        font-style: normal;
+        font-weight: normal;
+        font-size: 18px;
+        line-height: 21px;
+        letter-spacing: -0.02em;
+        color: #000000;
+    }
+}
+
+.profile-news__contacts{
+
+    background-color: #fff;
+    border-radius: 25px;
+    padding: 15px 0;
+    &  h2 {
+        padding-left: 30px;
+        padding-top: 5px;
+    width: 230px;
+    height: 41px;
+    font-family: $pt;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: -0.02em;
+    }
+    & > p{
+        width: 388px;
+height: 42px;
+
+font-family: $ws;
+font-style: normal;
+font-weight: normal;
+font-size: 18px;
+line-height: 21px;
+letter-spacing: -0.02em;
+        padding-left: 30px;
+        padding-top: 1px;
+    }
+
+    &  h3 {
+        padding-left: 30px;
+        padding-top: 10px;
+    width: 230px;
+    height: 41px;
+    font-family: $pt;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 21px;
+    letter-spacing: -0.02em;
+    }
+
+}
+
+.profile-news__list{
+    display: block;
+    list-style-type: none;
+    padding-top:20px;
+}
+
+.profile-news {
+    flex-basis: 50%;
+    &__info{
+        font-family: $pt;
+        font-style: normal;
+       font-weight: normal;
+font-size: 35px;
+        line-height: 32px;
+        letter-spacing: -0.02em;
+
+        color: #000000;
+
+    }
+
+    &__item {
+        padding: 25px;
+        margin: 20px 0 25px 0;
+        width: 492px;
+        & a {
+            text-decoration: none;
+            & span {
+                font-family: Work Sans;
+                font-style: normal;
+                font-weight: bold;
+                font-size: 24px;
+                line-height: 28px;
+                letter-spacing: -0.02em;
+                color: #000000;
+            }
+        }
+    }
+}
+
+.profile-news__more {
+    margin-left: 180px;
+    font-family: 'PT Sans Caption', sans-serif;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 64px;
+    color: #000000;
+}
